--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,10 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-JWT_SECRET=json-web-token-secret-key
-JWT_ACCESS_TOKEN_EXPIRATION_MS=900000
+JWT_SECRET=somerandomstring_somerandomstring_somerandomstring_somerandomstring_somerandomstring
+JWT_ACCESS_TOKEN_EXPIRATION_MS=14400000
 JWT_REFRESH_TOKEN_EXPIRATION_MS=604800000
-ADMIN_USERNAME=admin
-ADMIN_PASSWORD=admin
-CORS_ALLOWED_ORIGINS=http://localhost:3000
+ADMIN_PHONE_NUMBER=0123456789
+ADMIN_PASSWORD=Admin@123
+
+springdoc.swagger-ui.tagsSorter=alpha
