--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ ADMIN_PASSWORD=Admin@123
 springdoc.swagger-ui.tagsSorter=alpha
 
 percent.deposit = 0.3
-min.deposit.of.high.risk = 10000.0
+min.deposit.of.high.risk = 10000000.0
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
